                - Added constructor:
                    constructor() {
                    this.img = "";
                    this.artistName = "";
                    this.albumName = "";
            - Within app.component.html
                - changed app-card from manual input into *ngFor loop format
            - Within app.component.ts
                - added export cards: cardModel[] = []
                - added constructor
    }

Lab 4:
    10/04/22
    - Main Features:
        - Created layout components:
            - album-layout
            - artist-page-layout
            - create-playlist-layout
            - home-layout
            - liked-songs-layout
            - search-layout
            - your-library-layout   
        - Within each layout
            - added navbar
                - did not include this is app.component.html becuse nav bar will have to change slightly between layouts
                    - especially within search layout
        - App component
            - removed most of the html except for the sec-nav-bar   
                - sec-nav-bar is a feature which holds contant through all pages in Spotify
            - added routing

Lab 5:
    10/09/22
    -Main Features:
        - Created 3 new components on 2 diferent pages :
            - artist-page-layout  
                - artist-header component
                    - displays artist verified text and verified logo   
                    - displays artist name in large font
                    - displays monthly listeners
                    - displays background img of artist
            - search-page-layout
                - added search-nav-bar
                    - search navbar completely refactors top-nav-bar. 
                        - not going to implement top-nav-bar refactor until I know it properly interacts with search-page-layout
]                    - added search functionality

                
                    
                    
                    