@@ -1,2 +1,3 @@
-<app-top-nav-bar> Loading... </app-top-nav-bar>
-<app-artist-header> Loading... </app-artist-header>
+<app-top-nav-bar style="z-index: -1 top 0 px;"> Loading... </app-top-nav-bar>
+<app-artist-header style="z-index: 0; top: 0px;"> Loading... </app-artist-header>
+<app-play-bar> Loading... </app-play-bar>
