@@ -1,0 +1,114 @@
+.contentSpacing {
+    padding: 0 32px;
+    margin: 0;
+    max-width: 1955px;
+
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-box-align: start;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: var(--action-bar-padding-bottom, 24px);
+    padding-top: var(--action-bar-padding-top, 24px);
+    position: relative;
+    background-color: #4e3d42;
+
+    --background-noise: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIzMDAiIGhlaWdodD0iMzAwIj48ZmlsdGVyIGlkPSJhIiB4PSIwIiB5PSIwIj48ZmVUdXJidWxlbmNlIHR5cGU9ImZyYWN0YWxOb2lzZSIgYmFzZUZyZXF1ZW5jeT0iLjc1IiBzdGl0Y2hUaWxlcz0ic3RpdGNoIi8+PGZlQ29sb3JNYXRyaXggdHlwZT0ic2F0dXJhdGUiIHZhbHVlcz0iMCIvPjwvZmlsdGVyPjxwYXRoIGZpbHRlcj0idXJsKCNhKSIgb3BhY2l0eT0iLjA1IiBkPSJNMCAwaDMwMHYzMDBIMHoiLz48L3N2Zz4=");
+}
+
+.container {
+    align-items: center;
+    display: flex;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    width: 100%;
+    margin: 0;
+}
+
+.playButtonWrapper {
+    margin-right: 32px;
+}
+
+.playButton {
+    box-sizing: border-box;
+    font-size: 1.125rem;
+    font-weight: 700;
+    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, ));
+    border: 0px none;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: none;
+    touch-action: manipulation;
+    transition-duration: 33ms;
+    transition-property: background-color, border-color, color, box-shadow, filter, transform;
+    user-select: none;
+    transform: translate3d(0px, 0px, 0px);
+    padding: 0px;
+    min-inline-size: 0px;
+    min-block-size: 56px;
+    border-radius: 500px;
+    inline-size: 56px;
+    block-size: 56px;
+    border: none;
+    background-color: var(--background-highlight, #1ed760);
+    cursor: default;
+}
+
+.playButton:hover {
+    background-color: var(--background-highlight, #1fdf64);
+    transform: scale(1.04);
+}
+
+.iconWrapper {
+    display: flex;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    align-self: center;
+    align-items: center;
+}
+
+.svg {
+    fill: currentcolor;
+    align-self: center;
+    align-items: center;
+}
+
+.followButton {
+    margin-right: 24px;
+
+    background-color: transparent;
+    border: 1px solid hsla(0, 0%, 100%, .3);
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: .1em;
+    line-height: 16px;
+    padding: 7px 15px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.followButton:hover {
+    border-color: #fff;
+}
+
+.moreOptionsButton {
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    align-items: center;
+    background: transparent;
+    border: 0;
+    color: hsla(0, 0%, 100%, .6);
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
+.moreOptionsButton:hover {
+    color: #fff;
+}
