@@ -1,0 +1,15 @@
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'app-play-bar',
+  templateUrl: './play-bar.component.html',
+  styleUrls: ['./play-bar.component.css']
+})
+export class PlayBarComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
